--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,12 @@
 command:
-  df -h:
-    磁盘使用情况
+  w:
+    CPU使用情况
   free -m:
     内存使用情况
+  df -h:
+    磁盘使用情况
+
+
 
 
 parser_rule:
@@ -15,3 +19,5 @@ out_md_dir: './md_dir'
 out_html_dir: 'html_dir'
 pcinfo: 'pcinfo.txt'
 templates: './templates'
+temp_dir: './temp'
+temp_templates: './templates/temp'
